oc/prod/backend-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: backend-prod
  namespace: fec-ef-app
  labels:
    app: backend
    env: prod
spec:
  strategy:
    type: Rolling
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - backend
        from:
          kind: ImageStreamTag
          namespace: fec-ef-app
          name: 'fec-ef-app-backend:prod'
  replicas: 1
  test: false
  selector:
    app: backend
    env: prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
        env: prod
    spec:
      containers:
        - name: backend
          image: >-
            salientcrgt/fec-ef-app-backend:prod
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
