oc/prod/postgresql-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: postgresql-prod
  namespace: fec-ef-app
  labels:
    app: postgresql
    env: prod
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'postgresql:9.5'
    - type: ConfigChange
  replicas: 1
  test: false
  selector:
    app: postgresql
    env: prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresql
        env: prod
    spec:
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-prod
      containers:
        - name: postgresql
          image: >-
            registry.access.redhat.com/rhscl/postgresql-95-rhel7@sha256:b40f48962137beaf961d3a889f862c549cecea940e34a4b4f88ec6fc8d2a9d8b
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - >-
                  psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d
                  $POSTGRESQL_DATABASE -c 'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities: {}
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  readyReplicas: 1
