oc/prod/postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql
    env: prod
  name: postgresql-prod
  namespace: fec-ef-app
spec:
  ports:
    - name: postgresql-prod
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresql
    env: prod
  sessionAffinity: None
  type: ClusterIP
