oc/prod/frontend-route.yml
apiVersion: v1
kind: Route
metadata:
  name: frontend-prod
  namespace: fec-ef-app
spec:
  host: prod-fecportal-fec-ef-app.b9ad.pro-us-east-1.openshiftapps.com
  path: /
  port:
    targetPort: node
  to:
    kind: Service
    name: fec-ef-app-frontend-prod
    weight: 100
